--- a/quiz-app/package.json
+++ b/quiz-app/package.json
@@ -8,7 +8,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "dev": "nodemon server.js"
   },
   "private": true,
   "dependencies": {
@@ -25,6 +26,7 @@
     "axios": "^0.16.2",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "nodemon": "^1.11.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
